--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     </div>
     
     <div class="header-center">
-        <h1>JCSC (Jazz Chord & Scale)</h1>
+        <h1>JCSC (Jazz Chord and Scale Calculator)</h1>
     </div>
 
     <div class="header-controls">
